# rrc-gui

./: .gitignore  README.md  pyproject.toml
rrc_gui/: __init__.py  client.py  config.py  connection_manager.py  constants.py  dialogs.py  envelope.py  error_handler.py  gui.py  logging_manager.py  main.py  message_handler.py  room_manager.py  slash_command_handler.py  state.py  theme.py  ui_components.py  ui_constants.py  utils.py
